--- a/test.ipynb
+++ b/test.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
     "        seg_B = (1,1)\n",
     "        point = (2,2)\n",
     "        \n",
-    "        self.assertTrue(pointBelongsToSegment(seg_A, seg_B, point))"
+    "        self.assertTrue(sl.pointBelongsToSegment(seg_A, seg_B, point))"
    ]
   },
   {
@@ -525,29 +525,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "............FEFFFFFEF.....\n",
+      "............EEEEEEEEEE\n",
+      "======================================================================\n",
+      "ERROR: test_anotherOptusAngle (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 68, in test_anotherOptusAngle\n",
+      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
       "======================================================================\n",
       "ERROR: test_identicalSegments (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-10-3ecdff66bd9f>\", line 12, in test_identicalSegments\n",
       "    self.assertEqual(0, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 242, in computeArea\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
       "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 224, in ortogonalProjection\n",
-      "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
-      "    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)\n",
-      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 97, in _raise_linalgerror_singular\n",
-      "    raise LinAlgError(\"Singular matrix\")\n",
-      "numpy.linalg.LinAlgError: Singular matrix\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_oneOptusAngle (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 60, in test_oneOptusAngle\n",
+      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_square (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 20, in test_square\n",
+      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_trapeziumNegative (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 44, in test_trapeziumNegative\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_trapeziumNegativePositive (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 52, in test_trapeziumNegativePositive\n",
+      "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_trapeziumSimplest (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 36, in test_trapeziumSimplest\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
       "\n",
       "======================================================================\n",
       "ERROR: test_triangle (__main__.TestComputeArea)\n",
@@ -555,85 +637,49 @@
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-10-3ecdff66bd9f>\", line 28, in test_triangle\n",
       "    self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 242, in computeArea\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
       "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 224, in ortogonalProjection\n",
-      "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
-      "    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)\n",
-      "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 97, in _raise_linalgerror_singular\n",
-      "    raise LinAlgError(\"Singular matrix\")\n",
-      "numpy.linalg.LinAlgError: Singular matrix\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_anotherOptusAngle (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 68, in test_anotherOptusAngle\n",
-      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 1.8750000000000002\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_oneOptusAngle (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 60, in test_oneOptusAngle\n",
-      "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 2.006932429798716\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_square (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 20, in test_square\n",
-      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
-      "AssertionError: 1 != 0.5\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumNegative (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 44, in test_trapeziumNegative\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
-      "AssertionError: 1.5 != 1.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumNegativePositive (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 52, in test_trapeziumNegativePositive\n",
-      "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
-      "AssertionError: 5 != 3.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapeziumSimplest (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 36, in test_trapeziumSimplest\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
-      "AssertionError: 1.5 != 1.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_twoOptusAngles (__main__.TestComputeArea)\n",
+      "ERROR: test_twoOptusAngles (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-10-3ecdff66bd9f>\", line 76, in test_twoOptusAngles\n",
       "    self.assertEqual(3, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 3 != 3.0103986446980744\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 210, in ortogonalProjection\n",
+      "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 283, in pointBelongsToSegment\n",
+      "    if dotproduct > squaredlengthba:\n",
+      "NameError: name 'squaredlengthba' is not defined\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_flatTriangle (__main__.TestAreaRightTriangle)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-12-bb0110e111cd>\", line 10, in test_flatTriangle\n",
+      "    self.assertTrue(pointBelongsToSegment(seg_A, seg_B, point))\n",
+      "NameError: name 'pointBelongsToSegment' is not defined\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 26 tests in 0.074s\n",
+      "Ran 22 tests in 0.072s\n",
       "\n",
-      "FAILED (failures=7, errors=2)\n"
+      "FAILED (errors=10)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=26 errors=2 failures=7>"
+       "<unittest.runner.TextTestResult run=22 errors=10 failures=0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
