--- a/solution.ipynb
+++ b/solution.ipynb
@@ -294,7 +294,7 @@
     "        return False\n",
     "\n",
     "    squaredSegmentLength = seg_length(x_1,x_2)**2\n",
-    "    if dotproduct > squaredlengthba:\n",
+    "    if dotproduct > squaredSegmentLength:\n",
     "        return False\n",
     "\n",
     "    return True"
