--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -112,14 +112,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import np.linalg\n",
+    "\n",
     "class Triangle:\n",
     "    \n",
-    "    def __init__:\n",
-    "        pass\n",
+    "    def __init__(self,p1,p2,p3):\n",
+    "        \"\"\"\n",
+    "        arg1 p1 : a Point\n",
+    "        arg2 p2 : a Point\n",
+    "        arg3 p3 : a Point\n",
+    "        \"\"\"\n",
+    "        self.p1 = p1\n",
+    "        self.p2 = p2\n",
+    "        self.p3 = p3\n",
     "    \n",
     "    def area(self):\n",
+    "        \"\"\"\n",
+    "        return : the area of the triangle.\n",
+    "        \"\"\"\n",
+    "        return(0.5*np.linalg.det(np.array([[self.p2.x - self.p1.x,self.p3.x - self.p1.x ],[self.p2.y - self.p1.y, self.p3.y - self.p1.y]])))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
