feat Objects.ipynb : translated the functions intersection and orthogonal projection into OOP.

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -86,14 +86,84 @@
     "        arg1 other : a Segment, the one with which we want to compute the intersection\n",
     "        return intersect : a Point, the intersection of the two segments.\n",
     "        \"\"\"\n",
-    "        return(intersect)\n",
+    "        # First case : the two lines are vertical\n",
+    "        if (self.p1.x == self.p2.x and other.p1.x  == other.p1.y) :\n",
+    "            intersect = None\n",
+    "\n",
+    "        # Second case : only the first line is vertical\n",
+    "        elif self.p1.x == self.p2.x :\n",
+    "            a = (other.p1.y-other.p2.y)/(other.p1.x-other.p1.y)\n",
+    "            b = other.p2.y - a * other.p1.y\n",
+    "            intersect = (self.p1.x,a*self.p1.x + b)\n",
+    "\n",
+    "        # Third case : only the second line is vertical\n",
+    "        elif other.p1.x  == other.p1.y :\n",
+    "            a = (self.p1.y-self.p2.y)/(self.p1.x-self.p2.x)\n",
+    "            b = self.p2.y - a * self.p2.x\n",
+    "            intersect = (other.p1.x,a*other.p1.x + b)\n",
+    "\n",
+    "        # Last case : general case\n",
+    "        else :\n",
+    "            a_x = (self.p1.y - self.p2.y)/(self.p1.x - self.p2.x)\n",
+    "            b_x = self.p1.y - a_x * self.p1.x\n",
+    "            a_y = (other.p1.y - other.p2.y)/(other.p1.x - other.p1.y)\n",
+    "            b_y = other.p1.y - a_y * other.p1.x\n",
+    "\n",
+    "            if a_x == a_y :\n",
+    "                # Case where the lines are parallel\n",
+    "                intersect = None\n",
+    "\n",
+    "            else :\n",
+    "                #The equations are\n",
+    "                #y = a_x*x + b_x\n",
+    "                #y = a_y*x + b_y\n",
+    "                # The solution is the inverted matrix\n",
+    "                intersect = ( (b_y-b_x)/(a_x-a_y),\\\n",
+    "                              (b_y * a_x - b_x * a_y)/(a_x - a_y) )\n",
+    "        # If a point is found, check if it belongs to the segments and not only the lines (self.p1.x<intersect[0]<self.p2.x or...)\n",
+    "        if intersect :\n",
+    "            if not ( (intersect[0] >= min(self.p1.x,self.p2.x)) and (intersect[0] <= max(self.p1.x,self.p2.x))\\\n",
+    "                    and (intersect[1] >= min(self.p1.y,self.p2.y)) and (intersect[1] <= max(self.p1.y,self.p2.y))\\\n",
+    "                    and (intersect[0] >= min(other.p1.x,other.p1.y)) and (intersect[0] <= max(other.p1.x,other.p1.y))\\\n",
+    "                    and (intersect[1] >= min(other.p1.y,other.p2.y)) and (intersect[1] <= max(other.p1.y,other.p2.y))): # Checked if it is in the y-segment \n",
+    "                intersect = None\n",
+    "\n",
+    "\n",
+    "            return(intersect)\n",
     "    \n",
     "    def orthogonalProjection(self,point):\n",
     "        \"\"\"\n",
     "        arg1 point : a Point.\n",
     "        return : a Point, the orthogonal projection of point onto self.\n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        if self.p1.x == self.p2.x :\n",
+    "            # First case : the line containing x_1 and x_2 is vertical\n",
+    "            newPoint = (self.p1.x,point.y)\n",
+    "\n",
+    "        elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+    "            newPoint = y\n",
+    "\n",
+    "        else :\n",
+    "        # Second case : the line containing x_1 and x_2 is not vertical\n",
+    "            a = (self.p2.y-self.p1.y)/(self.p2.x-self.p1.x)\n",
+    "            b = self.p1.y - a * self.p1.x\n",
+    "            # Now we know the line containing x_1 and x_2 has the equation y = a * x + b\n",
+    "            # So a normal vector to this line is (a,-1)\n",
+    "            # This vector is directing the normal line passing by the point y and its equation is -x + a*y + c = 0 :\n",
+    "            # let's find c!\n",
+    "            c = point.x + a*point.y\n",
+    "            # Now the intersection point is the point (x,y) which verifies :\n",
+    "            # a*x - y = -b\n",
+    "            # -x + a*y = -c\n",
+    "            mat = np.array([[a,-1],[-1,a]])\n",
+    "            # Not invertible if a = +- 1 : ???\n",
+    "            point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
+    "            newPoint = (point[0],point[1])\n",
+    "\n",
+    "        ## express the line passing by x_1 and x_2\n",
+    "        ## line = (self.p2.y-self.p1.y)/(self.p2.x-self.p1.x)\n",
+    "\n",
+    "        return newPoint\n",
     "    \n",
     "    def pathLength(path):\n",
     "        \"\"\"\n",
