feat: completed the functiuon testing for appartenance of a point to a segment

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
     "        # First case : the line containing x_1 and x_2 is vertical\n",
     "        newPoint = (x_1[0],y[1])\n",
     "        \n",
-    "    elif pointBelongsToSegment(x_1, x_2, y): # y belongs to the segemnt [x_1, x_2]\n",
+    "    elif pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
     "        newPoint = y\n",
     "    \n",
     "    else :\n",
@@ -282,10 +282,9 @@
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: A boolean, True if y belongs to the segment [x_1,x_2]. False otherwise.\n",
     "    \"\"\"\n",
-    "    crossproduct = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
-    "\n",
     "    #check that x_1, x_2 and y are aligned:\n",
-    "    if abs(crossproduct) > 0.0000000001: \n",
+    "    crossproduct = (y[1] - x_1[1]) * (x_2[0] - x_1[0]) - (y[0] - x_1[0]) * (x_2[1] - x_1[1])\n",
+    "    if (isinstance(crossproduct, int) and abs(crossproduct) != 0) or (isinstance(crossproduct,float) and abs(crossproduct) > 0.0000000001):\n",
     "        return False\n",
     "\n",
     "    #check that y belongs to the segment:\n",
