--- a/test.ipynb
+++ b/test.ipynb
@@ -299,7 +299,7 @@
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
     "        \n",
     "    def test_noIntersection(self):\n",
     "        segA_1 = (0,0)\n",
@@ -315,7 +315,7 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (0,-1)\n",
     "        \n",
-    "        self.assertEqual((0,0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n",
+    "        self.assertEqual((0.0,0.0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n",
     "        \n",
     "    def test_permutationOrderOne(self):\n",
     "         ## same segemnts as test_simplestIntersection but given in a different order\n",
@@ -324,7 +324,7 @@
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1,1), sl.intersection(segA_2, segA_1, segB_1, segB_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_2, segA_1, segB_1, segB_2))# expected (1,1)\n",
     "        \n",
     "    def test_permutationOrderTwo(self):\n",
     "         ## same segemnts as test_simplestIntersection but given in a different order\n",
@@ -333,7 +333,7 @@
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_2, segB_1))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segA_1, segA_2, segB_2, segB_1))# expected (1,1)\n",
     "        \n",
     "    def test_permutationOrderThree(self):\n",
     "         ## same segemnts as test_simplestIntersection but given in a different order\n",
@@ -342,7 +342,7 @@
     "        segB_1 = (2,0)\n",
     "        segB_2 = (0,2)\n",
     "        \n",
-    "        self.assertEqual((1,1), sl.intersection(segB_1, segB_2, segA_1, segA_2))# expected (1,1)\n",
+    "        self.assertEqual((1.0,1.0), sl.intersection(segB_1, segB_2, segA_1, segA_2))# expected (1,1)\n",
     "\n"
    ]
   },
@@ -390,7 +390,7 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (2,2)\n",
     "        \n",
-    "        self.assertEqual(0, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
+    "        self.assertEqual(0, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_square(self):\n",
     "        segA_1 = (0,0)\n",
@@ -398,15 +398,15 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (1,0)\n",
     "        \n",
-    "        self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+    "        self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
     "    def test_triangle(self):\n",
     "        segA_1 = (0,0)\n",
-    "        segA_2 = (0,1)\n",
-    "        segB_1 = (1,1)\n",
-    "        segB_2 = (0.5,0.5)\n",
+    "        segA_2 = (0,2)\n",
+    "        segB_1 = (2,2)\n",
+    "        segB_2 = (1,1)\n",
     "        \n",
-    "        self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+    "        self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
     "    def test_trapeziumSimplest(self):\n",
     "        segA_1 = (0,0)\n",
@@ -414,7 +414,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,0)\n",
     "        \n",
-    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_trapeziumNegative(self):\n",
     "        segA_1 = (0,0)\n",
@@ -422,7 +422,7 @@
     "        segB_1 = (-1,-1)\n",
     "        segB_2 = (-2,0)\n",
     "        \n",
-    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_trapeziumNegativePositive(self):\n",
     "        segA_1 = (-1,-1)\n",
@@ -430,29 +430,29 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,-1)\n",
     "        \n",
-    "        self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+    "        self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_oneOptusAngle(self):\n",
     "        segA_1 = (0,0)\n",
-    "        segA_2 = (0,2)\n",
-    "        segB_1 = (1,-1)\n",
-    "        segB_2 = (1,2)\n",
+    "        segA_2 = (2,0)\n",
+    "        segB_1 = (-1,1)\n",
+    "        segB_2 = (2,1)\n",
     "        \n",
     "        self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
     "    def test_anotherOptusAngle(self):\n",
     "        segA_1 = (0,0)\n",
-    "        segA_2 = (0,2)\n",
-    "        segB_1 = (1,0)\n",
-    "        segB_2 = (1,3)\n",
+    "        segA_2 = (2,0)\n",
+    "        segB_1 = (0,1)\n",
+    "        segB_2 = (3,1)\n",
     "        \n",
     "        self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "    \n",
     "    def test_twoOptusAngles(self):\n",
     "        segA_1 = (0,0)\n",
-    "        segA_2 = (0,2)\n",
-    "        segB_1 = (1,-1)\n",
-    "        segB_2 = (1,3)\n",
+    "        segA_2 = (2,0)\n",
+    "        segB_1 = (-1,1)\n",
+    "        segB_2 = (3,1)\n",
     "        \n",
     "        self.assertEqual(3, sl.computeArea(segA_1, segA_2, segB_1, segB_2))"
    ]
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,23 +567,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...................F.FFFFFEF.....\n",
+      "...................F.FFFFFEF....."
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0.0)\n",
+      "None\n",
+      "(1.0, 1.0)\n",
+      "(1.0, 1.0)\n",
+      "(1.0, 1.0)\n",
+      "(1.0, 1.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "======================================================================\n",
       "ERROR: test_triangle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 28, in test_triangle\n",
-      "    self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 250, in computeArea\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 28, in test_triangle\n",
+      "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 257, in computeArea\n",
       "    height =  seg_length(y_1, ortogonalProjection(x_1, y_2, y_1))\n",
-      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 227, in ortogonalProjection\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 234, in ortogonalProjection\n",
       "    point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
       "  File \"C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\numpy\\linalg\\linalg.py\", line 551, in inv\n",
       "    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)\n",
@@ -595,60 +614,60 @@
       "FAIL: test_anotherOptusAngle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 68, in test_anotherOptusAngle\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 68, in test_anotherOptusAngle\n",
       "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 1.8750000000000002\n",
+      "AssertionError: 2.5 != 1.5051993223490372\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_oneOptusAngle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 60, in test_oneOptusAngle\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 60, in test_oneOptusAngle\n",
       "    self.assertEqual(2.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 2.5 != 2.006932429798716\n",
+      "AssertionError: 2.5 != 1.536590742882148\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_square (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 20, in test_square\n",
-      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 20, in test_square\n",
+      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 1 != 0.5\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_trapeziumNegative (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 44, in test_trapeziumNegative\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 44, in test_trapeziumNegative\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 1.5 != 1.0\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_trapeziumNegativePositive (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 52, in test_trapeziumNegativePositive\n",
-      "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 52, in test_trapeziumNegativePositive\n",
+      "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 5 != 3.0\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_trapeziumSimplest (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 36, in test_trapeziumSimplest\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 36, in test_trapeziumSimplest\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 1.5 != 1.0\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_twoOptusAngles (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-10-3ecdff66bd9f>\", line 76, in test_twoOptusAngles\n",
+      "  File \"<ipython-input-10-15550e04f7a3>\", line 76, in test_twoOptusAngles\n",
       "    self.assertEqual(3, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 3 != 3.0103986446980744\n",
+      "AssertionError: 3 != 2.0155644370746373\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 33 tests in 0.087s\n",
+      "Ran 33 tests in 0.041s\n",
       "\n",
       "FAILED (failures=7, errors=1)\n"
      ]
@@ -659,7 +678,7 @@
        "<unittest.runner.TextTestResult run=33 errors=1 failures=7>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
