--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +200,12 @@
     "            intersect = ( (b_y-b_x)/(a_x-a_y),\\\n",
     "                          (b_y * a_x - b_x * a_y)/(a_x - a_y) )\n",
     "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
-    "    if intersect :\n",
-    "        if not ( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))\\\n",
-    "                and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\\n",
-    "                and (intersect[0] >= min(y_1[0],y_2[0])) and (intersect[0] <= max(y_1[0],y_2[0]))\\\n",
-    "                and (intersect[1] >= min(y_1[1],y_2[1])) and (intersect[1] <= max(y_1[1],y_2[1]))): # Checked if it is in the y-segment \n",
+    "    if intersect:\n",
+    "        if not pointBelongsToSegment(x_1, x_2, intersect) and not pointBelongsToSegment(y_1, y_2, intersect):\n",
+    "        #if not ( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))\\\n",
+    "        #        and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\\n",
+    "        #        and (intersect[0] >= min(y_1[0],y_2[0])) and (intersect[0] <= max(y_1[0],y_2[0]))\\\n",
+    "        #        and (intersect[1] >= min(y_1[1],y_2[1])) and (intersect[1] <= max(y_1[1],y_2[1]))): # Checked if it is in the y-segment \n",
     "            intersect = None\n",
     "    \n",
     "    return intersect\n",
