feat : added file objectsTest.ipynb, meant to host the unittests for the object-oriented version. fix solution.ipynb : looked at why computeArea doesn't work ; problem comes partly from orthogonalProjection so we will fix the latter first, by adding tests on it.

--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -23,8 +23,8 @@
     "class Point:\n",
     "    \n",
     "    \"\"\"\n",
-    "    Represents points in the plane, by an attribute x representing the abscissa\n",
-    "    and an attribute y representing the ordinate.\n",
+    "    Represents points in the plane, with two attributes :\n",
+    "    x representing the abscissa and y representing the ordinate.\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, x,y):\n",
