--- a/solution.ipynb
+++ b/solution.ipynb
@@ -257,13 +257,13 @@
     "    \n",
     "    # first triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
-    "    height =  seg_length(x_1, ortogonalProjection(x_1, y_2, x_1))\n",
-    "    area += areaRightTriangle(base, height)\n",
+    "    height = seg_length(x_2, ortogonalProjection(x_1, y_2, x_2))\n",
+    "    area += 2*areaRightTriangle(base, height)\n",
     "    \n",
     "    # second triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
     "    height =  seg_length(y_1, ortogonalProjection(x_1, y_2, y_1))\n",
-    "    area += areaRightTriangle(base, height)\n",
+    "    area += 2*areaRightTriangle(base, height)\n",
     "\n",
     "    return area\n",
     "\n",
